--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -1,5 +1,60 @@
-.list{
+// @import "../../responsive.scss";
+
+.listPage {
   display: flex;
-  flex-direction: column;
-  gap: 50px;
+  height: 100%;
+  gap: 20px;
+  background: var(--background-dark);
+  border-radius: 20px;
+  overflow: hidden;
+
+  .listContainer {
+    flex: 3;
+    height: 100%;
+    background: linear-gradient(
+      135deg,
+      var(--background-card),
+      var(--background-light)
+    );
+    border-radius: 20px;
+    padding: 20px;
+
+    .wrapper {
+      height: 100%;
+      padding-right: 50px;
+      display: flex;
+      flex-direction: column;
+      gap: 50px;
+      overflow-y: scroll;
+      padding-bottom: 50px;
+
+      &::-webkit-scrollbar {
+        width: 8px;
+      }
+
+      &::-webkit-scrollbar-track {
+        background: var(--background-light);
+        border-radius: 10px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: var(--primary-color);
+        border-radius: 10px;
+      }
+    }
+  }
+  .mapContainer {
+    flex: 2;
+    height: 100%;
+    background: var(--background-card);
+    border-radius: 20px;
+    padding: 20px;
+    border: 1px solid var(--border-color);
+    box-shadow: var(--shadow);
+
+    .map {
+      border-radius: 15px;
+      overflow: hidden;
+    }
+  }
 }
